--- a/redirect.html
+++ b/redirect.html
@@ -6,7 +6,7 @@
         return (value != null) ? unescape(value[1]) : null;
     }
 
-    var m = getCookie("yourKey");
+    var m = getCookie("link");
 
     if (m) {
         location.href = m;
