--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 
 <body>
   <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this
-    <strong>p</strong> tag and its contents.</p>
-    <a href="intent:#Intent;scheme=bocaraton://open?url_param=hi santhosh;package=com.bocaraton.hotel;S.browser_fallback_url=http%3A%2F%2Fzxing.org;end">click here</a>
+    <strong>p</strong> tag and its contents. <a
+      href="intent:#Intent;scheme=bocaraton://open?url_param=hi santhosh;package=com.bocaraton.hotel;S.browser_fallback_url=http%3A%2F%2Fzxing.org;end">click
+      here</a>
+  </p>
 </body>
 
 </html>
