--- a/index.html
+++ b/index.html
@@ -2,13 +2,49 @@
 <html>
 
 <head>
-  <script>
-    custom = "bocaraton://app?page=events";
-    var now = new Date();
-    var time = now.getTime();
-    var expireTime = time + 1000 * 3600;
-    now.setTime(expireTime);
-    document.cookie = 'link=' + custom + ';expires=' + now.toGMTString() + ';domain=<your_domain>';
+  <script type="text/javascript">
+
+    function getUrlParam(param) {
+      var parameters = window.location.search.substring(1);
+      var sURLVariables = parameters.split('&');
+      console.log(sURLVariables);
+      for (var i = 0; i < sURLVariables.length; i++) {
+        var sParameterName = sURLVariables[i].split('=');
+        if (sParameterName[0] == param) {
+          return sParameterName[1];
+        }
+      }
+    }
+
+    var token = getUrlParam(token);
+
+    var androidIntentUrl = "intent://www.iranatlas.info/droid/deferred-deeplink" + window.location.search + "#Intent;scheme=http;package=sample.deeplinking.deferred.deferreddeeplink;S.browser_fallback_url=https%3A%2F%2Fplay.google.com%2Fstore%2Fapps%2Fdetails?id=sample.deeplinking.deferred.deferreddeeplink&referrer=droid%2Fcolor" + window.location.search + ";end";
+
+    var isMobile = {
+      Windows: function () {
+        return /IEMobile|Windows Phone|Lumia/i.test(navigator.userAgent);
+      },
+      Android: function () {
+        return /Android/i.test(navigator.userAgent);
+      },
+      iPhone: function () {
+        return /iPhone/i.test(navigator.userAgent);
+      }
+    };
+
+    // Windows return both android and iPhone in it's identity, need to check first.
+    if (!isMobile.Windows()) {
+      if (isMobile.Android()) {
+
+        window.location = androidIntentUrl;
+      }
+
+      if (isMobile.iPhone()) {
+        //window.location=appleStoreUrl;
+      }
+    }
+
+    /******************************************************************/
   </script>
   <title>This is the title of the webpage!</title>
 </head>
@@ -16,7 +52,7 @@
 <body>
   <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this
     <strong>p</strong> tag and its contents. <a
-      href="intent:#Intent;scheme=bocaraton://open?url_param=hi santhosh;package=com.bocaraton.hotel;S.browser_fallback_url=http%3A%2F%2Fzxing.org;end">click
+      href="intent://www.iranatlas.info/droid/deferred-deeplink#Intent;scheme=http;package=sample.deeplinking.deferred.deferreddeeplink;S.browser_fallback_url=https%3A%2F%2Fplay.google.com%2Fstore%2Fapps%2Fdetails?id=sample.deeplinking.deferred.deferreddeeplink&referrer=droid%2Fcolor;end">click
       here</a>
   </p>
 </body>
