--- a/index.html
+++ b/index.html
@@ -70,9 +70,12 @@ Bootstrap 5 HTML CSS Template
         </div>
     </nav>
     <main>
-        <section class="job-section job-featured-section section-padding" id="job-section">
+        
+        <section class="job-section job-featured-section" id="job-section">
+     
             <div class="container">
                 <div class="row">
+           <img class="header-image" src="images/bg.jpeg">
 
                     <div class="col-lg-6 col-12 text-center mx-auto mb-4">
                         <h2>Servicios</h2>
